# skillm

./: .gitignore  Makefile  README.md  package.sh  pyproject.toml  skill-library-README.md  skillm_entry.py
doc/: agent-skills-specification.md  development-decisions.md
docs/: DESIGN.md  FRONTMATTER.md  PLAN-v2.md
src/skillm/: __init__.py  check.py  cli.py  config.py  core.py  db.py  git.py  importers.py  inject.py  lockfile.py  metadata.py  models.py  remote.py  repo.py  scan.py  skillpack.py  snapshot.py
src/skillm/backends/: __init__.py  base.py  local.py  ssh.py
tests/: conftest.py  test_check.py  test_cli.py  test_core.py  test_db.py  test_e2e.py  test_git.py  test_importers.py  test_inject.py  test_library_branches.py  test_lockfile.py  test_metadata.py  test_remote.py  test_scan.py  test_skillpack.py  test_snapshot.py
