[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillm"
version = "0.2.0"
description = "Local-first, offline-capable skill manager for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "renhuailu" }]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.24",
]

[project.scripts]
skillm = "skillm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/skillm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
